# easywhisper

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md
docs/: _quarto.yml  index.qmd  objects.json  styles.css
scripts/: download_ct2.py  transcribe_ct2.py  transcribe_ct2_dataloader.py  transcribe_vad.py  transcribe_whisperx.py
src/easywhisper/: audio.py  pipelines.py  utils.py
src/easywhisper/asr/: ct2.py  hf.py
src/easywhisper/data/: __init__.py  collators.py  streaming.py
