[build-system]
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "easywhisper"

requires-python = ">= 3.10"

dependencies = [
  "torch>=2.5.0,<=2.8.0",
  "tqdm>=4.66.1",
]

readme = "README.md"

[project.urls]

[tool.ruff]
line-length = 99
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Disable fix for unused imports (`F401`).
unfixable = ["F401"]

[tool.ruff.format]
# Use double quotes for strings and indent with spaces.
quote-style = "double"
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"